IllinoisGRMHD: reconstruct_set_of_prims_PPM -- PPEOS Patch -- Modified the code to handle piecewise polytropic EOSs.

--- a/IllinoisGRMHD/doc/Tutorial-IllinoisGRMHD__reconstruct_set_of_prims_PPM.ipynb
+++ b/IllinoisGRMHD/doc/Tutorial-IllinoisGRMHD__reconstruct_set_of_prims_PPM.ipynb
@@ -420,7 +420,7 @@
     "static inline CCTK_REAL ftilde_compute(const int flux_dirn,CCTK_REAL U[MAXNUMVARS][MAXNUMINDICES]);\n",
     "static inline CCTK_REAL slope_limit(CCTK_REAL dU,CCTK_REAL dUp1);\n",
     "static inline void steepen_rho(CCTK_REAL U[MAXNUMVARS][MAXNUMINDICES],CCTK_REAL slope_lim_dU[MAXNUMVARS][MAXNUMINDICES],\n",
-    "                               CCTK_REAL gamma_th,CCTK_REAL P_cold,CCTK_REAL Gamma_cold,\n",
+    "                               CCTK_REAL Gamma_th,CCTK_REAL P_cold,CCTK_REAL Gamma_cold,\n",
     "                               CCTK_REAL *rho_br_ppm,CCTK_REAL *rho_bl_ppm);\n",
     "static inline void compute_P_cold__Gamma_cold(CCTK_REAL rho_b,eos_struct &eos,   CCTK_REAL &P_cold,CCTK_REAL &Gamma_cold);\n",
     "static inline void monotonize(CCTK_REAL U,CCTK_REAL &Ur,CCTK_REAL &Ul);"
@@ -1019,7 +1019,7 @@
     "#define ETA1   20.0\n",
     "#define ETA2    0.05\n",
     "#define EPSILON 0.01\n",
-    "static inline void steepen_rho(CCTK_REAL U[MAXNUMVARS][MAXNUMINDICES],CCTK_REAL slope_lim_dU[MAXNUMVARS][MAXNUMINDICES],CCTK_REAL gamma_th,CCTK_REAL P_cold,CCTK_REAL Gamma_cold,\n",
+    "static inline void steepen_rho(CCTK_REAL U[MAXNUMVARS][MAXNUMINDICES],CCTK_REAL slope_lim_dU[MAXNUMVARS][MAXNUMINDICES],CCTK_REAL Gamma_th,CCTK_REAL P_cold,CCTK_REAL Gamma_cold,\n",
     "                               CCTK_REAL *rho_br_ppm,CCTK_REAL *rho_bl_ppm) {\n",
     "\n",
     "  // Next compute centered differences d RHOB and d^2 RHOB\n",
@@ -1057,7 +1057,7 @@
     "\n",
     "\n",
     "  // Compute effective Gamma = (partial P / partial rho0)_s /(P/rho0)\n",
-    "  CCTK_REAL Gamma = gamma_th + (Gamma_cold-gamma_th)*P_cold/U[PRESSURE][PLUS0];"
+    "  CCTK_REAL Gamma = Gamma_th + (Gamma_cold-Gamma_th)*P_cold/U[PRESSURE][PLUS0];"
    ]
   },
   {
@@ -1400,11 +1400,32 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Next we consider the case where the EOS is given by\n",
+    "Next we consider the case where the EOS is given by a single-polytrope\n",
     "\n",
     "$$\n",
-    "\\boxed{P_{\\rm cold} = \\kappa \\rho_{b}^{\\Gamma_{\\rm cold}}}\\ .\n",
-    "$$"
+    "\\boxed{P_{\\rm cold} = \\kappa \\rho_{b}^{\\Gamma_{\\rm cold}}}\\ ,\n",
+    "$$\n",
+    "\n",
+    "and also the piecewise polytrope EOS\n",
+    "\n",
+    "$$\n",
+    "\\boxed{\n",
+    "P_{\\rm cold} =\n",
+    "\\left\\{\n",
+    "\\begin{matrix}\n",
+    "K_{0}\\rho^{\\Gamma_{0}} & , & \\rho \\leq \\rho_{0}\\\\\n",
+    "K_{1}\\rho^{\\Gamma_{1}} & , & \\rho_{0} \\leq \\rho \\leq \\rho_{1}\\\\\n",
+    "\\vdots &  & \\vdots\\\\\n",
+    "K_{j}\\rho^{\\Gamma_{j}} & , & \\rho_{j-1} \\leq \\rho \\leq \\rho_{j}\\\\\n",
+    "\\vdots &  & \\vdots\\\\\n",
+    "K_{N-1}\\rho^{\\Gamma_{N-1}} & , & \\rho_{N-2} \\leq \\rho \\leq \\rho_{N-1}\\\\\n",
+    "K_{N}\\rho^{\\Gamma_{N}} & , & \\rho \\geq \\rho_{N-1}\n",
+    "\\end{matrix}\n",
+    "\\right.\n",
+    "}\\ .\n",
+    "$$\n",
+    "\n",
+    "Notice that we left the fact that $\\Gamma_{i} \\equiv \\Gamma_{{\\rm cold},i}$ implicit above."
    ]
   },
   {
@@ -1423,64 +1444,15 @@
    "source": [
     "%%writefile -a $outfile_path__reconstruct_set_of_prims_PPM__C\n",
     "\n",
-    "\n",
-    "  if(eos.neos==1) {\n",
-    "    // Eq. 14 of http://arxiv.org/pdf/0802.0200.pdf :\n",
-    "    // P_{cold} = K_i rho_i^{\\Gamma_i}\n",
-    "    P_cold = eos.K_poly[0]*fasterpow_ppm_reconstruct(rho_b,eos.Gamma_poly[0]);\n",
-    "    Gamma_cold = eos.Gamma_poly[0];\n",
-    "    return;\n",
-    "  }"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Then, we implement a piecewise polytrope EOS, which is given by, in the case where ${\\rm eos.neos} = 2$\n",
-    "\n",
-    "$$\n",
-    "\\boxed{P_{\\rm cold} \n",
-    "= \n",
-    "\\left\\{\n",
-    "\\begin{matrix}\n",
-    "\\kappa_{1} \\rho_{b}^{\\Gamma_{1}} & {\\rm for}\\ \\rho \\leq \\rho_{\\rm nuc}\\\\\n",
-    "\\kappa_{2} \\rho_{b}^{\\Gamma_{2}} & {\\rm for}\\ \\rho \\geq \\rho_{\\rm nuc}\n",
-    "\\end{matrix}\n",
-    "\\right.\n",
-    "}\\ .\n",
-    "$$\n",
-    "\n",
-    "Notice that we left the fact that $\\Gamma_{i} \\equiv \\Gamma_{{\\rm cold},i}$ implicit above."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 24,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Appending to ../src/reconstruct_set_of_prims_PPM.C\n"
-     ]
-    }
-   ],
-   "source": [
-    "%%writefile -a $outfile_path__reconstruct_set_of_prims_PPM__C\n",
-    "\n",
-    "  for(int nn=1;nn<eos.neos;nn++) {\n",
-    "    if (rho_b <= eos.rho_poly[nn]  &&  rho_b > eos.rho_poly[nn-1]) {\n",
-    "      P_cold = eos.K_poly[nn]*fasterpow_ppm_reconstruct(rho_b,eos.Gamma_poly[nn]);\n",
-    "      Gamma_cold = eos.Gamma_poly[nn];\n",
-    "    }\n",
-    "  }\n",
-    "  if (rho_b > eos.rho_poly[eos.neos-1]) {\n",
-    "    P_cold = eos.K_poly[eos.neos]*fasterpow_ppm_reconstruct(rho_b,eos.Gamma_poly[eos.neos]);\n",
-    "    Gamma_cold = eos.Gamma_poly[eos.neos];\n",
-    "  }\n",
-    "}\n"
+    "  /***********************************\n",
+    "   * Piecewise Polytropic EOS Patch  *\n",
+    "   * Computing P_cold and Gamma_cold *\n",
+    "   ***********************************/\n",
+    "  int polytropic_index = find_polytropic_K_and_Gamma_index(eos,rho_b);\n",
+    "  Gamma_cold = eos.Gamma_cold[polytropic_index];\n",
+    "  P_cold     = eos.K_poly[polytropic_index]*fasterpow_ppm_reconstruct(rho_b,Gamma_cold);\n",
+    "    \n",
+    "}"
    ]
   },
   {
@@ -1497,7 +1469,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -1553,7 +1525,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -1596,7 +1568,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -1638,7 +1610,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -1671,7 +1643,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -1715,7 +1687,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -1765,7 +1737,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -1829,7 +1801,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -1841,7 +1813,7 @@
       "24c24\n",
       "<                                CCTK_REAL gamma_th,CCTK_REAL P_cold,CCTK_REAL gamma_cold,\n",
       "---\n",
-      ">                                CCTK_REAL gamma_th,CCTK_REAL P_cold,CCTK_REAL Gamma_cold,\n",
+      ">                                CCTK_REAL Gamma_th,CCTK_REAL P_cold,CCTK_REAL Gamma_cold,\n",
       "26c26\n",
       "< static inline void compute_P_cold__gamma_cold(CCTK_REAL rho_b,eos_struct &eos,   CCTK_REAL &P_cold,CCTK_REAL &gamma_cold);\n",
       "---\n",
@@ -1857,41 +1829,49 @@
       "231c231\n",
       "< static inline void steepen_rho(CCTK_REAL U[MAXNUMVARS][MAXNUMINDICES],CCTK_REAL slope_lim_dU[MAXNUMVARS][MAXNUMINDICES],CCTK_REAL gamma_th,CCTK_REAL P_cold,CCTK_REAL gamma_cold,\n",
       "---\n",
-      "> static inline void steepen_rho(CCTK_REAL U[MAXNUMVARS][MAXNUMINDICES],CCTK_REAL slope_lim_dU[MAXNUMVARS][MAXNUMINDICES],CCTK_REAL gamma_th,CCTK_REAL P_cold,CCTK_REAL Gamma_cold,\n",
+      "> static inline void steepen_rho(CCTK_REAL U[MAXNUMVARS][MAXNUMINDICES],CCTK_REAL slope_lim_dU[MAXNUMVARS][MAXNUMINDICES],CCTK_REAL Gamma_th,CCTK_REAL P_cold,CCTK_REAL Gamma_cold,\n",
       "240c240\n",
       "<   CCTK_REAL Gamma = gamma_th + (gamma_cold-gamma_th)*P_cold/U[PRESSURE][PLUS0];\n",
       "---\n",
-      ">   CCTK_REAL Gamma = gamma_th + (Gamma_cold-gamma_th)*P_cold/U[PRESSURE][PLUS0];\n",
+      ">   CCTK_REAL Gamma = Gamma_th + (Gamma_cold-Gamma_th)*P_cold/U[PRESSURE][PLUS0];\n",
       "288c288\n",
       "< static inline void compute_P_cold__gamma_cold(CCTK_REAL rho_b,eos_struct &eos,   CCTK_REAL &P_cold,CCTK_REAL &gamma_cold) {\n",
       "---\n",
       "> static inline void compute_P_cold__Gamma_cold(CCTK_REAL rho_b,eos_struct &eos,   CCTK_REAL &P_cold,CCTK_REAL &Gamma_cold) {\n",
-      "293c293\n",
+      "293,294c293,297\n",
       "<   if(rho_b==0.0) { P_cold = 0.0; gamma_cold = eos.gamma_tab[0]; return; }\n",
+      "< \n",
       "---\n",
       ">   if(rho_b==0.0) { P_cold = 0.0; Gamma_cold = eos.Gamma_poly[0]; return; }\n",
-      "298,299c298,299\n",
+      ">   /***********************************\n",
+      ">    * Piecewise Polytropic EOS Patch  *\n",
+      ">    * Computing P_cold and Gamma_cold *\n",
+      ">    ***********************************/\n",
+      "296,300c299\n",
+      "<     // Eq. 14 of http://arxiv.org/pdf/0802.0200.pdf :\n",
+      "<     // P_{cold} = K_i rho_i^{\\Gamma_i}\n",
       "<     P_cold = eos.k_tab[0]*fasterpow_ppm_reconstruct(rho_b,eos.gamma_tab[0]);\n",
       "<     gamma_cold = eos.gamma_tab[0];\n",
+      "<     return;\n",
       "---\n",
-      ">     P_cold = eos.K_poly[0]*fasterpow_ppm_reconstruct(rho_b,eos.Gamma_poly[0]);\n",
-      ">     Gamma_cold = eos.Gamma_poly[0];\n",
-      "303,305c303,305\n",
+      ">     int polytropic_index = 0;\n",
+      "302,310c301,302\n",
+      "<   for(int nn=1;nn<eos.neos;nn++) {\n",
       "<     if (rho_b <= eos.rho_tab[nn]  &&  rho_b > eos.rho_tab[nn-1]) {\n",
       "<       P_cold = eos.k_tab[nn]*fasterpow_ppm_reconstruct(rho_b,eos.gamma_tab[nn]);\n",
       "<       gamma_cold = eos.gamma_tab[nn];\n",
-      "---\n",
-      ">     if (rho_b <= eos.rho_poly[nn]  &&  rho_b > eos.rho_poly[nn-1]) {\n",
-      ">       P_cold = eos.K_poly[nn]*fasterpow_ppm_reconstruct(rho_b,eos.Gamma_poly[nn]);\n",
-      ">       Gamma_cold = eos.Gamma_poly[nn];\n",
-      "308,310c308,310\n",
+      "<     }\n",
+      "<   }\n",
       "<   if (rho_b > eos.rho_tab[eos.neos-1]) {\n",
       "<     P_cold = eos.k_tab[eos.neos]*fasterpow_ppm_reconstruct(rho_b,eos.gamma_tab[eos.neos]);\n",
       "<     gamma_cold = eos.gamma_tab[eos.neos];\n",
       "---\n",
-      ">   if (rho_b > eos.rho_poly[eos.neos-1]) {\n",
-      ">     P_cold = eos.K_poly[eos.neos]*fasterpow_ppm_reconstruct(rho_b,eos.Gamma_poly[eos.neos]);\n",
-      ">     Gamma_cold = eos.Gamma_poly[eos.neos];\n"
+      ">   else{\n",
+      ">     int polytropic_index = find_polytropic_K_and_Gamma_index(eos,rho_b);\n",
+      "311a304,306\n",
+      ">   Gamma_cold = eos.Gamma_cold[polytropic_index];\n",
+      ">   P_cold     = eos.K_poly[polytropic_index]*fasterpow_ppm_reconstruct(rho_b,Gamma_cold);\n",
+      ">     \n"
      ]
     }
    ],
@@ -1951,24 +1931,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[NbConvertApp] Converting notebook Tutorial-IllinoisGRMHD__reconstruct_set_of_prims_PPM.ipynb to latex\r\n",
-      "[NbConvertApp] Writing 111312 bytes to Tutorial-IllinoisGRMHD__reconstruct_set_of_prims_PPM.tex\r\n",
-      "This is pdfTeX, Version 3.14159265-2.6-1.40.18 (TeX Live 2017/Debian) (preloaded format=pdflatex)\r\n",
-      " restricted \\write18 enabled.\r\n",
-      "entering extended mode\r\n",
-      "This is pdfTeX, Version 3.14159265-2.6-1.40.18 (TeX Live 2017/Debian) (preloaded format=pdflatex)\r\n",
-      " restricted \\write18 enabled.\r\n",
-      "entering extended mode\r\n",
-      "This is pdfTeX, Version 3.14159265-2.6-1.40.18 (TeX Live 2017/Debian) (preloaded format=pdflatex)\r\n",
-      " restricted \\write18 enabled.\r\n",
-      "entering extended mode\r\n"
+      "[NbConvertApp] Converting notebook Tutorial-IllinoisGRMHD__reconstruct_set_of_prims_PPM.ipynb to latex\n",
+      "[NbConvertApp] Writing 110596 bytes to Tutorial-IllinoisGRMHD__reconstruct_set_of_prims_PPM.tex\n",
+      "This is pdfTeX, Version 3.14159265-2.6-1.40.18 (TeX Live 2017/Debian) (preloaded format=pdflatex)\n",
+      " restricted \\write18 enabled.\n",
+      "entering extended mode\n",
+      "This is pdfTeX, Version 3.14159265-2.6-1.40.18 (TeX Live 2017/Debian) (preloaded format=pdflatex)\n",
+      " restricted \\write18 enabled.\n",
+      "entering extended mode\n",
+      "This is pdfTeX, Version 3.14159265-2.6-1.40.18 (TeX Live 2017/Debian) (preloaded format=pdflatex)\n",
+      " restricted \\write18 enabled.\n",
+      "entering extended mode\n"
      ]
     }
    ],
