IllinoisGRMHD: the_conservative_to_primitive_algorithm -- PPEOS Patch -- Modified the code to handle piecewise polytropic EOSs. Still need to modify the font_fix code.

--- a/IllinoisGRMHD/doc/Tutorial-IllinoisGRMHD__the_conservative_to_primitive_algorithm.ipynb
+++ b/IllinoisGRMHD/doc/Tutorial-IllinoisGRMHD__the_conservative_to_primitive_algorithm.ipynb
@@ -2096,9 +2096,15 @@
     " *\n",
     " -----------------------------------------------------------------------------*/\n",
     "\n",
-    "inline int font_fix_gamma_equals2(CCTK_REAL &u_x, CCTK_REAL &u_y, CCTK_REAL &u_z,CCTK_REAL *CONSERVS,CCTK_REAL *PRIMS,CCTK_REAL *METRIC_PHYS,CCTK_REAL *METRIC_LAP_PSI4,eos_struct &eos) {\n",
+    "/**********************************\n",
+    " * Piecewise Polytropic EOS Patch *\n",
+    " *    Font fix: function call     *\n",
+    " **********************************/\n",
+    "inline int font_fix_gamma_equals2(CCTK_REAL &u_x, CCTK_REAL &u_y, CCTK_REAL &u_z,CCTK_REAL *CONSERVS,CCTK_REAL *PRIMS,CCTK_REAL *METRIC_PHYS,CCTK_REAL *METRIC_LAP_PSI4, CCTK_REAL K_poly, font_fix_struct &fontfix) {\n",
+    "    \n",
+    "  CCTK_REAL kpoly2 = 2.0*K_poly;\n",
+    "\n",
     "  CCTK_REAL rhob;\n",
-    "  CCTK_REAL kpoly2 = 2.0*eos.K_poly;\n",
     "  CCTK_REAL tol = 1.e-15;\n",
     "  CCTK_REAL Bxbar = PRIMS[BX_CENTER]*ONE_OVER_SQRT_4PI;\n",
     "  CCTK_REAL Bybar = PRIMS[BY_CENTER]*ONE_OVER_SQRT_4PI;\n",
@@ -2455,13 +2461,16 @@
     "%%writefile -a $outfile_path__font_fix_gamma_law__C\n",
     "\n",
     "\n",
-    "inline int font_fix_general_gamma(CCTK_REAL &u_x, CCTK_REAL &u_y, CCTK_REAL &u_z,CCTK_REAL *CONSERVS,CCTK_REAL *PRIMS,CCTK_REAL *METRIC_PHYS,CCTK_REAL *METRIC_LAP_PSI4,eos_struct &eos) {\n",
-    "  CCTK_REAL gamma=eos.Gamma_poly[0];\n",
+    "/**********************************\n",
+    " * Piecewise Polytropic EOS Patch *\n",
+    " *    Font fix: function call     *\n",
+    " **********************************/\n",
+    "inline int font_fix_general_gamma(CCTK_REAL &u_x, CCTK_REAL &u_y, CCTK_REAL &u_z,CCTK_REAL *CONSERVS,CCTK_REAL *PRIMS,CCTK_REAL *METRIC_PHYS,CCTK_REAL *METRIC_LAP_PSI4, CCTK_REAL K_poly, CCTK_REAL Gamma_poly, font_fix_struct &fontfix) {\n",
+    "  CCTK_REAL Gamma_poly_m1   = Gamma_poly-1.0;\n",
+    "  CCTK_REAL Gam_Gamm1_K_poly = Gamma_poly/Gamma_poly_m1*K_poly;\n",
+    "\n",
     "  CCTK_REAL rhob;\n",
     "  CCTK_REAL tol = 1.e-15;\n",
-    "  CCTK_REAL gam1 = gamma-1.0;\n",
-    "  CCTK_REAL gam_gamm1_kpoly = gamma/gam1*eos.K_poly;\n",
-    "\n",
     "  CCTK_REAL Bxbar = PRIMS[BX_CENTER]*ONE_OVER_SQRT_4PI;\n",
     "  CCTK_REAL Bybar = PRIMS[BY_CENTER]*ONE_OVER_SQRT_4PI;\n",
     "  CCTK_REAL Bzbar = PRIMS[BZ_CENTER]*ONE_OVER_SQRT_4PI;\n",
@@ -2545,7 +2554,7 @@
     "    rhob0 = rhob1;\n",
     "\n",
     "    // first, find rhob for the given S_fluid^2\n",
-    "    CCTK_REAL h = 1.0 + gam_gamm1_kpoly*pow(rhob0,gam1); \n",
+    "    CCTK_REAL h = 1.0 + Gamma_poly_m1*pow(rhob0,Gamma_poly_m1); \n",
     "    rhob1 = CONSERVS[RHOSTAR]*Psim6/sqrt(1.0+Sf20/SQR(CONSERVS[RHOSTAR]*h));\n",
     "    while( fabs(rhob1-rhob0) > rhob1*tol) {\n",
     "      rhob0 = rhob1;\n",
