IllinoisGRMHD: mhdflux -- PPEOS Patch -- Minor fix to a markdown cell that was presenting the PPEOS.

--- a/IllinoisGRMHD/doc/Tutorial-IllinoisGRMHD__mhdflux.ipynb
+++ b/IllinoisGRMHD/doc/Tutorial-IllinoisGRMHD__mhdflux.ipynb
@@ -231,19 +231,21 @@
     "   We now consider a set of dividing densities $\\rho_{\\min} < \\rho_{1} < \\cdots < \\rho_{n-1} < \\rho_{\\max}$ such that the pressure and energy density are everywhere continuous. In each interval, the EOS is a single polytrope, with its own $K_{i}$ and $\\left(\\Gamma_{cold}\\right)_{i}\\equiv\\Gamma_{i}$, so that\n",
     "   \n",
     "   $$\n",
-    "   \\boxed{\n",
-    "   P_{\\rm cold} =\n",
-    "   \\left\\{\n",
-    "   \\begin{matrix}\n",
-    "   K_{1}\\rho^{\\Gamma_{1}} & \\rho_{\\min}\\leq\\rho<\\rho_{1}\\\\\n",
-    "   K_{2}\\rho^{\\Gamma_{2}} & \\rho_{1}\\leq\\rho<\\rho_{2}\\\\\n",
-    "   \\vdots\\\\\n",
-    "   K_{n-1}\\rho^{\\Gamma_{n-1}} & \\rho_{n-2}\\leq\\rho<\\rho_{n-1}\\\\\n",
-    "   K_{n}\\rho^{\\Gamma_{n}} & \\rho_{n-1}\\leq\\rho\\leq\\rho_{\\max}\n",
-    "   \\end{matrix}\n",
-    "   \\right.\n",
-    "   }\\ .\n",
-    "   $$\n",
+    "    \\boxed{\n",
+    "    P_{\\rm cold} =\n",
+    "    \\left\\{\n",
+    "    \\begin{matrix}\n",
+    "    K_{0}\\rho^{\\Gamma_{0}} & , & \\rho \\leq \\rho_{0}\\\\\n",
+    "    K_{1}\\rho^{\\Gamma_{1}} & , & \\rho_{0} \\leq \\rho \\leq \\rho_{1}\\\\\n",
+    "    \\vdots &  & \\vdots\\\\\n",
+    "    K_{j}\\rho^{\\Gamma_{j}} & , & \\rho_{j-1} \\leq \\rho \\leq \\rho_{j}\\\\\n",
+    "    \\vdots &  & \\vdots\\\\\n",
+    "    K_{N-1}\\rho^{\\Gamma_{N-1}} & , & \\rho_{N-2} \\leq \\rho \\leq \\rho_{N-1}\\\\\n",
+    "    K_{N}\\rho^{\\Gamma_{N}} & , & \\rho \\geq \\rho_{N-1}\n",
+    "    \\end{matrix}\n",
+    "    \\right.\n",
+    "    }\\ .\n",
+    "    $$\n",
     "   \n",
     "   Then, for each set $\\left\\{P_{i},K_{i},\\Gamma_{i}\\right\\}$ the desired quantities are computed using the same equations used in Case 2."
    ]
@@ -816,11 +818,11 @@
       ">   CCTK_REAL P_coldl,eps_coldl,dPcold_drhol=0,eps_thl=0,h_l=0,Gamma_coldl;\n",
       ">   compute_P_cold__eps_cold__dPcold_drho__eps_th__h__Gamma_cold(Ul,eos,P_coldl,eps_coldl,dPcold_drhol,eps_thl,h_l,Gamma_coldl);\n",
       "60c60\n",
-      "<   compute_v02(dPcold_drhor,eos.gamma_th,eps_thr,h_r,smallbr,Ur,v02r);\n",
+      "<   compute_v02(dPcold_drhor,eos.Gamma_th,eps_thr,h_r,smallbr,Ur,v02r);\n",
       "---\n",
       ">   compute_v02(dPcold_drhor,eos.Gamma_th,eps_thr,h_r,smallbr,Ur,v02r);\n",
       "62c62\n",
-      "<   compute_v02(dPcold_drhol,eos.gamma_th,eps_thl,h_l,smallbl,Ul,v02l);\n",
+      "<   compute_v02(dPcold_drhol,eos.Gamma_th,eps_thl,h_l,smallbl,Ul,v02l);\n",
       "---\n",
       ">   compute_v02(dPcold_drhol,eos.Gamma_th,eps_thl,h_l,smallbl,Ul,v02l);\n"
      ]
