GiRaFFE/Tutorial-GiRaFFE_NRPy_Ccode_library-Stilde-flux.ipynb: Final bug fixes to make Stilde-flux pass a unit test.

--- a/Tutorial-GiRaFFE_NRPy_Ccode_library-Stilde-flux.ipynb
+++ b/Tutorial-GiRaFFE_NRPy_Ccode_library-Stilde-flux.ipynb
@@ -249,7 +249,7 @@
     "    REAL ValenciavU0 = auxevol_gfs[IDX4pt(VALENCIAV_RU0GF,idx)];\n",
     "    REAL ValenciavU1 = auxevol_gfs[IDX4pt(VALENCIAV_RU1GF,idx)];\n",
     "    REAL ValenciavU2 = auxevol_gfs[IDX4pt(VALENCIAV_RU2GF,idx)];\n",
-    "    REAL alpha = auxevol_gfs[IDX4pt(ALPHA_FACEGF,idx)];\n",
+    "    const REAL alpha = auxevol_gfs[IDX4pt(ALPHA_FACEGF,idx)];\n",
     "    const REAL gammaDD00 = auxevol_gfs[IDX4pt(GAMMA_FACEDD00GF,idx)];\n",
     "    const REAL gammaDD01 = auxevol_gfs[IDX4pt(GAMMA_FACEDD01GF,idx)];\n",
     "    const REAL gammaDD02 = auxevol_gfs[IDX4pt(GAMMA_FACEDD02GF,idx)];\n",
@@ -423,7 +423,7 @@
     "\n",
     "This computes phase speeds in the direction given by flux_dirn. Note that we replace the full dispersion relation with a simpler one, which overestimates the maximum speeds by a factor of ~2. See full discussion around Eqs. 49 and 50 in [Duez, et al.](http://arxiv.org/pdf/astro-ph/0503420.pdf). In summary, we solve the dispersion relation (in, e.g., the $x$-direction) with a wave vector of $k_\\mu = (-\\omega,k_x,0,0)$. So, we solve the approximate dispersion relation $\\omega_{\\rm cm}^2 = [v_A^2 + c_s^2 (1-v_A^2)]k_{\\rm cm}^2$ for the wave speed $\\omega/k_x$, where the sound speed $c_s = \\sqrt{\\Gamma P/(h \\rho_0)}$, the Alfv&eacute;n speed $v_A = 1$ (in GRFFE), $\\omega_{\\rm cm} = -k_\\mu k^\\mu$ is the frequency in the comoving frame, $k_{\\rm cm}^2 = K_\\mu K^\\mu$ is the wavenumber squared in the comoving frame, and $K_\\mu = (g_{\\mu\\nu} + u_\\mu u_\\nu)k^\\nu$ is the part of the wave vector normal to the four-velocity $u^\\mu$. See below for a complete derivation.\n",
     "\n",
-    "~~We will only edit the function slightly, since it is already well-optimized.~~\n",
+    "~~We will only edit the function slightly, since it is already well-optimized.~~ One edit we need to make in particular is to the term `psim4*gupii` in `c`; that was written assuming the use of the conformal metric $\\tilde{g}^{ii}$. Since we are not using that here, and are instead using the ADM metric, we should not multiply by $\\psi^{-4}$.\n",
     "\n",
     "```c\n",
     "static inline void find_cp_cm(REAL &cplus,REAL &cminus,const REAL v02,const REAL u0,\n",
@@ -436,7 +436,7 @@
     "  //Find cplus, cminus:\n",
     "  const REAL a = u0_SQUARED * (1.0-v02) + v02*ONE_OVER_LAPSE_SQUARED;\n",
     "  const REAL b = 2.0* ( shifti*ONE_OVER_LAPSE_SQUARED * v02 - u0_SQUARED * vi * (1.0-v02) );\n",
-    "  const REAL c = u0_SQUARED*vi*vi * (1.0-v02) - v02 * ( psim4*gupii -\n",
+    "  const REAL c = u0_SQUARED*vi*vi * (1.0-v02) - v02 * ( gupii -\n",
     "                                                               shifti*shifti*ONE_OVER_LAPSE_SQUARED);\n",
     "  REAL detm = b*b - 4.0*a*c;\n",
     "  //ORIGINAL LINE OF CODE:\n",
@@ -470,8 +470,8 @@
     "\\begin{align}\n",
     "b &= 2 \\left(\\beta^i v_0^2 / \\alpha^2 - (u^0)^2 v^i (1-v_0^2)\\right) \\\\\n",
     "&= 2 \\beta^i / \\alpha^2 \\\\\n",
-    "{\\rm and\\ }c &= (u^0)^2 (v^i)^2 (1-v_0^2) - v_0^2 \\left(\\psi^{-4} g^{ii} - (\\beta^i)^2/\\alpha^2\\right) \\\\\n",
-    "&= \\psi^{-4} g^{ii} - (\\beta^i)^2/\\alpha^2,\n",
+    "{\\rm and\\ }c &= (u^0)^2 (v^i)^2 (1-v_0^2) - v_0^2 \\left(g^{ii} - (\\beta^i)^2/\\alpha^2\\right) \\\\\n",
+    "&= g^{ii} - (\\beta^i)^2/\\alpha^2,\n",
     "\\end{align}\n",
     "are simplifications that should save us some time. Note that we also guarantee that we force `detm` to be positive. Thus, `detm/a` is guaranteed to be positive itself, rendering the calls to `sp.Abs()` superfluous. Furthermore, we eliminate any dependence on the Valencia 3-velocity and the time compoenent of the four-velocity, $u^0$."
    ]
@@ -491,7 +491,7 @@
     "    psim4 = gammadet**sp.Rational(1,3)\n",
     "    a = 1/(lapse*lapse)\n",
     "    b = 2 * shifti /(lapse*lapse)\n",
-    "    c = - psim4*gupii + shifti*shifti/(lapse*lapse)\n",
+    "    c = - gupii + shifti*shifti/(lapse*lapse)\n",
     "    detm = b*b - 4*a*c\n",
     "    detm = sp.sqrt(sp.Rational(1,2)*(detm + sp.Abs(detm)))\n",
     "    cplus  = sp.Rational(1,2)*(-b/a + detm/a)\n",
@@ -763,11 +763,11 @@
     "    st_j_r = alpha_sqrt_gamma * (smallb2_r*u4upperZero_r*u_rD[mom_comp] - smallb4_rU[0]*smallb4_rD[mom_comp+1])\n",
     "    st_j_l = alpha_sqrt_gamma * (smallb2_l*u4upperZero_l*u_lD[mom_comp] - smallb4_lU[0]*smallb4_lD[mom_comp+1])\n",
     "    \n",
-    "    # Declare these as symbols\n",
     "    cmaxL,cminL = find_cmax_cmin(flux_dirn,gamma_faceUU,beta_faceU,alpha_face,gammadet_face)\n",
     "    \n",
-    "    return u4upperZero_r\n",
-    "#     return (cminL*Fr + cmaxL*Fl - cminL*cmaxL*(st_j_r-st_j_l) )/(cmaxL + cminL)\n"
+    "#     return u_rD[flux_dirn]\n",
+    "#     return u4upperZero_r*alpha_face*(Valenciav_rU[0]*gamma_faceDD[0][mom_comp]+Valenciav_rU[1]*gamma_faceDD[1][mom_comp]+Valenciav_rU[2]*gamma_faceDD[2][mom_comp])\n",
+    "    return (cminL*Fr + cmaxL*Fl - cminL*cmaxL*(st_j_r-st_j_l) )/(cmaxL + cminL)\n"
    ]
   },
   {
@@ -957,7 +957,7 @@
      "output_type": "stream",
      "text": [
       "[NbConvertApp] Converting notebook Tutorial-GiRaFFE_NRPy_Ccode_library-Stilde-flux.ipynb to latex\n",
-      "[NbConvertApp] Writing 92456 bytes to Tutorial-GiRaFFE_NRPy_Ccode_library-Stilde-flux.tex\n",
+      "[NbConvertApp] Writing 93048 bytes to Tutorial-GiRaFFE_NRPy_Ccode_library-Stilde-flux.tex\n",
       "This is pdfTeX, Version 3.14159265-2.6-1.40.18 (TeX Live 2017/Debian) (preloaded format=pdflatex)\n",
       " restricted \\write18 enabled.\n",
       "entering extended mode\n",
