Tutorial-u0_smallb_Poynting-Cartesian: Fix lowering operator on u^mu to compute u_j; and code comment. Update trusted_values_dict.

--- a/Tutorial-u0_smallb_Poynting-Cartesian.ipynb
+++ b/Tutorial-u0_smallb_Poynting-Cartesian.ipynb
@@ -15,7 +15,7 @@
     "\n",
     "# Computing the 4-Velocity Time-Component $u^0$, the Magnetic Field Measured by a Comoving Observer $b^{\\mu}$, and the Poynting Vector $S^i$\n",
     "\n",
-    "## Author: Zach Etienne\n",
+    "## Authors: Zach Etienne & Patrick Nelson\n",
     "\n",
     "[comment]: <> (Abstract: TODO)\n",
     "\n",
@@ -44,7 +44,7 @@
     "    1. [Step 1.b](#u0): Compute $u^0$ from the Valencia 3-velocity\n",
     "    1. [Step 1.c](#uj): Compute $u_j$ from $u^0$, the Valencia 3-velocity, and $g_{\\mu\\nu}$\n",
     "    1. [Step 1.d](#gamma): Compute $\\gamma=$ `gammaDET` from the ADM 3+1 variables\n",
-    "    1. [Step 1.e](#beta): Compute $\\beta^\\mu$\n",
+    "    1. [Step 1.e](#beta): Compute $b^\\mu$\n",
     "1. [Step 2](#poynting_flux): Defining the Poynting Flux Vector $S^{i}$\n",
     "    1. [Step 2.a](#g): Computing $g^{i\\nu}$\n",
     "    1. [Step 2.b](#s): Computing $S^{i}$\n",
@@ -227,7 +227,7 @@
       " else {\n",
       "   const double tmprescale0 = 1.0/GAMMA_SPEED_LIMIT;\n",
       "   const double tmprescale1 = 2*ValenciavU0;\n",
-      "   const double tmprescale2 = sqrt((1 - tmprescale0)/(pow(ValenciavU0, 2)*gammaDD00 + pow(ValenciavU1, 2)*gammaDD11 + 2*ValenciavU1*ValenciavU2*gammaDD12 + ValenciavU1*gammaDD01*tmprescale1 + pow(ValenciavU2, 2)*gammaDD22 + ValenciavU2*gammaDD02*tmprescale1));\n",
+      "   const double tmprescale2 = sqrt((-tmprescale0 + 1)/(pow(ValenciavU0, 2)*gammaDD00 + pow(ValenciavU1, 2)*gammaDD11 + 2*ValenciavU1*ValenciavU2*gammaDD12 + ValenciavU1*gammaDD01*tmprescale1 + pow(ValenciavU2, 2)*gammaDD22 + ValenciavU2*gammaDD02*tmprescale1));\n",
       "   ValenciavU0 = ValenciavU0*tmprescale2;\n",
       "   ValenciavU1 = ValenciavU1*tmprescale2;\n",
       "   ValenciavU2 = ValenciavU2*tmprescale2;\n",
@@ -308,7 +308,7 @@
     "uD = ixp.zerorank1()\n",
     "for i in range(DIM):\n",
     "    for j in range(DIM):\n",
-    "        uD[j] += alpha*u0*gammaDD[i][j]*ValenciavU[j]"
+    "        uD[j] += alpha*u0*gammaDD[i][j]*ValenciavU[i]"
    ]
   },
   {
@@ -338,10 +338,10 @@
    "source": [
     "<a id='beta'></a>\n",
     "\n",
-    "## Step 1.e: Compute $\\beta^\\mu$ \\[Back to [top](#toc)\\]\n",
+    "## Step 1.e: Compute $b^\\mu$ \\[Back to [top](#toc)\\]\n",
     "$$\\label{beta}$$\n",
     "\n",
-    "We compute $\\beta^\\mu$ from the above expressions:\n",
+    "We compute $b^\\mu$ from the above expressions:\n",
     "\n",
     "\\begin{align}\n",
     "\\sqrt{4\\pi} b^0 = B^0_{\\rm (u)} &= \\frac{u_j B^j}{\\alpha} \\\\\n",
@@ -654,8 +654,8 @@
      "output_type": "stream",
      "text": [
       "[NbConvertApp] Converting notebook Tutorial-u0_smallb_Poynting-Cartesian.ipynb to latex\n",
-      "[pandoc warning] Duplicate link reference `[comment]' \"source\" (line 13, column 1)\n",
-      "[NbConvertApp] Writing 60886 bytes to Tutorial-u0_smallb_Poynting-Cartesian.tex\n",
+      "[pandoc warning] Duplicate link reference `[comment]' \"source\" (line 22, column 1)\n",
+      "[NbConvertApp] Writing 194229 bytes to Tutorial-u0_smallb_Poynting-Cartesian.tex\n",
       "This is pdfTeX, Version 3.14159265-2.6-1.40.18 (TeX Live 2017/Debian) (preloaded format=pdflatex)\n",
       " restricted \\write18 enabled.\n",
       "entering extended mode\n",
