Tutorial-u0_smallb_Poynting-Cartesian, u0_smallb_Poynting-Cartesian.py: Update documentation & code comments to latest NRPy+ standards.

--- a/Tutorial-u0_smallb_Poynting-Cartesian.ipynb
+++ b/Tutorial-u0_smallb_Poynting-Cartesian.ipynb
@@ -40,7 +40,7 @@
     "This module is organized as follows\n",
     "\n",
     "1. [Step 1](#u0bu): Computing $u^0$ and $b^{\\mu}$\n",
-    "    1. [Step 1.a](#4metric): Compute the 4-metric $g_{\\mu\\nu}$ from the ADM 3+1 variables\n",
+    "    1. [Step 1.a](#4metric): Compute the 4-metric $g_{\\mu\\nu}$ and its inverse $g^{\\mu\\nu}$ from the ADM 3+1 variables, using the [`BSSN.ADMBSSN_tofrom_4metric`](../edit/BSSN/ADMBSSN_tofrom_4metric.py) ([**tutorial**](Tutorial-ADMBSSN_tofrom_4metric.ipynb)) NRPy+ module\n",
     "    1. [Step 1.b](#u0): Compute $u^0$ from the Valencia 3-velocity\n",
     "    1. [Step 1.c](#uj): Compute $u_j$ from $u^0$, the Valencia 3-velocity, and $g_{\\mu\\nu}$\n",
     "    1. [Step 1.d](#gamma): Compute $\\gamma=$ `gammaDET` from the ADM 3+1 variables\n",
@@ -90,7 +90,7 @@
    "source": [
     "<a id='4metric'></a>\n",
     "\n",
-    "## Step 1.a: Compute the 4-metric $g_{\\mu\\nu}$ from the ADM 3+1 variables \\[Back to [top](#toc)\\]\n",
+    "## Step 1.a: Compute the 4-metric $g_{\\mu\\nu}$ and its inverse $g^{\\mu\\nu}$ from the ADM 3+1 variables, using the [`BSSN.ADMBSSN_tofrom_4metric`](../edit/BSSN/ADMBSSN_tofrom_4metric.py) ([**tutorial**](Tutorial-ADMBSSN_tofrom_4metric.ipynb)) NRPy+ module \\[Back to [top](#toc)\\]\n",
     "$$\\label{4metric}$$\n",
     "\n",
     "We are given $\\gamma_{ij}$, $\\alpha$, and $\\beta^i$ from ADMBase, so let's first compute \n",
@@ -109,43 +109,28 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import sympy as sp\n",
-    "import NRPy_param_funcs as par\n",
-    "import grid as gri\n",
-    "import indexedexp as ixp\n",
-    "import reference_metric as rfm\n",
-    "from outputC import *\n",
+    "# Step 1: Initialize needed Python/NRPy+ modules\n",
+    "import sympy as sp                         # SymPy: The Python computer algebra package upon which NRPy+ depends\n",
+    "import NRPy_param_funcs as par             # NRPy+: Parameter interface\n",
+    "import indexedexp as ixp                   # NRPy+: Symbolic indexed expression (e.g., tensors, vectors, etc.) support\n",
+    "import reference_metric as rfm             # NRPy+: Reference metric support\n",
+    "from outputC import *                      # NRPy+: Basic C code output functionality\n",
+    "import BSSN.ADMBSSN_tofrom_4metric as AB4m # NRPy+: ADM/BSSN <-> 4-metric conversions\n",
     "\n",
     "# Set spatial dimension = 3\n",
     "DIM=3\n",
     "\n",
     "thismodule = \"smallbPoynET\"\n",
     "\n",
-    "gammaDD = ixp.register_gridfunctions_for_single_rank2(\"AUX\",\"gammaDD\", \"sym01\",DIM=3)\n",
-    "betaU   = ixp.register_gridfunctions_for_single_rank1(\"AUX\",\"betaU\",DIM=3)\n",
-    "alpha   = gri.register_gridfunctions(\"AUX\",\"alpha\")\n",
-    "\n",
-    "# To get \\gamma_{\\mu \\nu} = gammabar4DD[mu][nu], we'll need to construct the 4-metric, using Eq. 2.122 in B&S:\n",
-    "\n",
-    "# Eq. 2.121 in B&S\n",
-    "betaD = ixp.zerorank1()\n",
-    "for i in range(DIM):\n",
-    "    for j in range(DIM):\n",
-    "        betaD[i] += gammaDD[i][j]*betaU[j]\n",
-    "\n",
-    "# Now compute the beta contraction.\n",
-    "beta2 = sp.sympify(0)\n",
-    "for i in range(DIM):\n",
-    "    beta2 += betaU[i]*betaD[i]\n",
-    "\n",
-    "# Eq. 2.122 in B&S\n",
-    "g4DD = ixp.zerorank2(DIM=4)\n",
-    "g4DD[0][0] = -alpha**2 + beta2\n",
-    "for i in range(DIM):\n",
-    "    g4DD[i+1][0] = g4DD[0][i+1] = betaD[i]\n",
-    "for i in range(DIM):\n",
-    "    for j in range(DIM):\n",
-    "        g4DD[i+1][j+1] = gammaDD[i][j]"
+    "# Step 1.a: Compute the 4-metric $g_{\\mu\\nu}$ and its inverse \n",
+    "#           $g^{\\mu\\nu}$ from the ADM 3+1 variables, using the\n",
+    "#           BSSN.ADMBSSN_tofrom_4metric NRPy+ module\n",
+    "import BSSN.ADMBSSN_tofrom_4metric as AB4m\n",
+    "gammaDD,betaU,alpha = AB4m.setup_ADM_quantities(\"ADM\")\n",
+    "AB4m.g4DD_ito_BSSN_or_ADM(\"ADM\")\n",
+    "g4DD = AB4m.g4DD\n",
+    "AB4m.g4UU_ito_BSSN_or_ADM(\"ADM\")\n",
+    "g4UU = AB4m.g4UU"
    ]
   },
   {
@@ -213,6 +198,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "\n",
       "/* Function for computing u^0 from Valencia 3-velocity. */\n",
       "/* Inputs: ValenciavU[], alpha, gammaDD[][], GAMMA_SPEED_LIMIT (C parameter) */\n",
       "/* Output: u0=u^0 and velocity-limited ValenciavU[] */\n",
@@ -258,9 +244,10 @@
     "rescaledu0 = 1/(alpha*sp.sqrt(1-Rmax))\n",
     "regularu0 =  1/(alpha*sp.sqrt(1-R))\n",
     "\n",
-    "computeu0_Cfunction  = \"/* Function for computing u^0 from Valencia 3-velocity. */\\n\"\n",
-    "computeu0_Cfunction += \"/* Inputs: ValenciavU[], alpha, gammaDD[][], GAMMA_SPEED_LIMIT (C parameter) */\\n\"\n",
-    "computeu0_Cfunction += \"/* Output: u0=u^0 and velocity-limited ValenciavU[] */\\n\\n\"\n",
+    "computeu0_Cfunction  = \"\"\"\n",
+    "/* Function for computing u^0 from Valencia 3-velocity. */\n",
+    "/* Inputs: ValenciavU[], alpha, gammaDD[][], GAMMA_SPEED_LIMIT (C parameter) */\n",
+    "/* Output: u0=u^0 and velocity-limited ValenciavU[] */\\n\\n\"\"\"\n",
     "\n",
     "computeu0_Cfunction += outputC([R,Rmax],[\"const double R\",\"const double Rmax\"],\"returnstring\",\n",
     "                               params=\"includebraces=False,CSE_varprefix=tmpR,outCverbose=False\")\n",
@@ -315,30 +302,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<a id='gamma'></a>\n",
-    "\n",
-    "## Step 1.d: Compute $\\gamma=\\text{gammaDET}$ from the ADM 3+1 variables \\[Back to [top](#toc)\\]\n",
-    "$$\\label{gamma}$$\n",
-    "\n",
-    "This is accomplished simply, using the symmetric matrix inversion function in [indexedexp.py](../edit/indexedexp.py):"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "gammaUU, gammaDET = ixp.symm_matrix_inverter3x3(gammaDD)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "<a id='beta'></a>\n",
     "\n",
-    "## Step 1.e: Compute $b^\\mu$ \\[Back to [top](#toc)\\]\n",
+    "## Step 1.d: Compute $b^\\mu$ \\[Back to [top](#toc)\\]\n",
     "$$\\label{beta}$$\n",
     "\n",
     "We compute $b^\\mu$ from the above expressions:\n",
@@ -360,7 +326,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -404,53 +370,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<a id='g'></a>\n",
-    "\n",
-    "## Step 2.a: Computing $g^{i\\nu}$ \\[Back to [top](#toc)\\]\n",
-    "$$\\label{g}$$\n",
-    "\n",
-    "We have already computed all of these quantities above, except $g^i{}_0$ so let's now construct this object:\n",
-    "\n",
-    "$$\n",
-    "g^i{}_0 = g^{i\\nu} g_{\\nu 0},\n",
-    "$$\n",
-    "which itself requires $g^{i\\nu}$ be defined (Eq. 4.49 in [Gourgoulhon](https://arxiv.org/pdf/gr-qc/0703035.pdf)):\n",
-    "$$\n",
-    "g^{\\mu\\nu} = \\begin{pmatrix} \n",
-    "-\\frac{1}{\\alpha^2} & \\frac{\\beta^i}{\\alpha^2} \\\\\n",
-    "\\frac{\\beta^i}{\\alpha^2} & \\gamma^{ij} - \\frac{\\beta^i\\beta^j}{\\alpha^2}\n",
-    "\\end{pmatrix},\n",
-    "$$\n",
-    "\n",
-    "where $\\gamma^{ij}$ was defined above where we computed $\\text{gammaDET}$."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "g4UU = ixp.zerorank2(DIM=4)\n",
-    "\n",
-    "g4UU[0][0] = -1 / alpha**2\n",
-    "for i in range(DIM):\n",
-    "    g4UU[0][i+1] = g4UU[i+1][0] = betaU[i]/alpha**2\n",
-    "for i in range(DIM):\n",
-    "    for j in range(DIM):\n",
-    "        g4UU[i+1][j+1] = gammaUU[i][j] - betaU[i]*betaU[j]/alpha**2"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "<a id='s'></a>\n",
     "\n",
-    "## Step 2.b: Computing $S^{i}$ \\[Back to [top](#toc)\\]\n",
+    "## Step 2.a: Computing $S^{i}$ \\[Back to [top](#toc)\\]\n",
     "$$\\label{s}$$\n",
     "\n",
-    "We start by computing \n",
+    "Given $g^{\\mu\\nu}$ computed above, we focus first on the $g^i{}_{0}$ term by computing \n",
     "$$\n",
     "g^\\mu{}_\\delta = g^{\\mu\\nu} g_{\\nu \\delta},\n",
     "$$\n",
@@ -462,35 +387,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Step 2a: compute g^\\mu_\\delta:\n",
+    "# Step 2.a.i: compute g^\\mu_\\delta:\n",
     "g4UD = ixp.zerorank2(DIM=4)\n",
     "for mu in range(4):\n",
     "    for delta in range(4):\n",
     "        for nu in range(4):\n",
     "            g4UD[mu][delta] += g4UU[mu][nu]*g4DD[nu][delta]\n",
     "\n",
-    "# Step 2b: compute b_{\\mu}\n",
+    "# Step 2.a.ii: compute b_{\\mu}\n",
     "smallb4D = ixp.zerorank1(DIM=4)\n",
     "for mu in range(4):\n",
     "    for nu in range(4):\n",
     "        smallb4D[mu] += g4DD[mu][nu]*smallb4U[nu]\n",
     "\n",
-    "# Step 2c: compute u_0 = g_{mu 0} u^{mu} = g4DD[0][0]*u0 + g4DD[i][0]*uU[i]\n",
+    "# Step 2.a.iii: compute u_0 = g_{mu 0} u^{mu} = g4DD[0][0]*u0 + g4DD[i][0]*uU[i]\n",
     "u_0 = g4DD[0][0]*u0\n",
     "for i in range(DIM):\n",
     "    u_0 += g4DD[i+1][0]*uU[i]\n",
     "        \n",
-    "# Step 2d: compute b^2, setting b^2 = smallb2etk, as gridfunctions with base names ending in a digit\n",
+    "# Step 2.a.iv: compute b^2, setting b^2 = smallb2etk, as gridfunctions with base names ending in a digit\n",
     "#          are forbidden in NRPy+.\n",
     "smallb2etk = sp.sympify(0)\n",
     "for mu in range(4):\n",
     "    smallb2etk += smallb4U[mu]*smallb4D[mu]\n",
     "\n",
-    "# Step 2d: compute S^i\n",
+    "# Step 2.a.v: compute S^i\n",
     "PoynSU = ixp.zerorank1()\n",
     "for i in range(DIM):\n",
     "    PoynSU[i] = -alpha * (smallb2etk*uU[i]*u_0 + sp.Rational(1,2)*smallb2etk*g4UD[i+1][0] - smallb4U[i+1]*smallb4D[0])"
@@ -513,7 +438,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -646,7 +571,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -655,7 +580,7 @@
      "text": [
       "[NbConvertApp] Converting notebook Tutorial-u0_smallb_Poynting-Cartesian.ipynb to latex\n",
       "[pandoc warning] Duplicate link reference `[comment]' \"source\" (line 22, column 1)\n",
-      "[NbConvertApp] Writing 194229 bytes to Tutorial-u0_smallb_Poynting-Cartesian.tex\n",
+      "[NbConvertApp] Writing 52315 bytes to Tutorial-u0_smallb_Poynting-Cartesian.tex\n",
       "This is pdfTeX, Version 3.14159265-2.6-1.40.18 (TeX Live 2017/Debian) (preloaded format=pdflatex)\n",
       " restricted \\write18 enabled.\n",
       "entering extended mode\n",
